Fix clip-path for custom-clip-episode and add scrollbar hiding styles for improved UI consistency

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,7 +37,7 @@ body {
 }
 
 .custom-clip-episode {
-  clip-path: polygon(0 0, 100% 0, 100% 68%, 70% 100%, 0 100%)
+  clip-path: polygon(0 0, 100% 0, 100% 64%, 70% 100%, 0 100%)
 
 }
 
@@ -76,4 +76,33 @@ body {
     top: 59%;
     right: 0%;
   }
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+      --background: #191d29;
+      --foreground: #ededed;
+  }
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
+.lighting-glow {
+  position: absolute;
+  bottom: -1rem;
+  left: 0;
+  width: 8rem;
+  height: 8rem;
+  background: radial-gradient(circle at top right, #18b0ef52, rgb(102 175 255 / 21%), #18b0ef52);
+  filter: blur(40px);
+  border-radius: 9999px;
+  pointer-events: none;
+  z-index: 0;
 }
